--- a/index.html
+++ b/index.html
@@ -1,42 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Mondposition und Abstand zu Fixstern</title>
+    <title>Mondposition und Distanz zu Fixsternen</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="stylesheet" href="https://pyscript.net/releases/2023.03.1/pyscript.css" />
     <script defer src="https://pyscript.net/releases/2023.03.1/pyscript.js"></script>
 </head>
 <body>
-    <h1>Mondposition und Abstandsbestimmung zu Fixstern</h1>
+    <h1>Mondposition und Abstandsbestimmung zu Fixsternen</h1>
 
     <h4>Datum und Zeit</h4>
-    <input id="date" type="date" value="2023-05-21" min="1723-02-17" max="2099-12-31" placeholder="Datum">
-    <input id="time" type="time" value="21:00:00" placeholder="Zeit">
+    <input id="date" type="date" value="1761-01-15" min="1723-02-17" max="2099-12-31" placeholder="Datum">
+    <input id="time" type="time" value="20:10:00" placeholder="Zeit">
 
     <h4>Geographische Länge (O: +) und Breite (N: +)</h4>
-    <input id="geolon" type="number" value="9.93" placeholder="Länge">
-    <input id="geolat" type="number" value="53.53" placeholder="Breite">
+    <input id="geolon" type="number" value="1.25" placeholder="Länge">
+    <input id="geolat" type="number" value="59.5333" placeholder="Breite">
+    <br><br>
+    <button id="ephembutton" py-click="ephem()" disabled>Bestimme Mondephemeriden</button>
+    <br>
+    <span id="mooncoo">Noch keine Mondkoordinaten berechnet</span>
+    <br><br>
 
     <h4>Sternkoordinaten (Rektaszension Deklination)</h4>
     <label for="refstar">Referenzstern:</label>
     <select name="refstar" id="refstar"></select>
 
     <input id="starpos" type="string" value=" " placeholder="Aldebaran = 04h35m55s +16d30m">
-    <br>
-    
     <br><br>
-    <button id="convertbutton" py-click="convert()" disabled>Finde den Mond</button>
-    <br><br>
-
-    <span id="mooncoo">Noch keine Mondkoordinaten berechnet</span>
+    <button id="distbutton" py-click="distanz(ephem())" disabled>Berechne Monddistanz</button>
     <br>
-    <span id="moondis">Noch keine Sternposition bestimmt</span>
+    <span id="moondis">Noch keine Sternposition eingegeben</span>
 
     <py-config src="./pyscript.toml"></py-config>
     <py-script src="./sextant.py"></py-script>
 
-   <h4>Positions- und Abstandsbestimmung mit
+    <br><br>
+    <h4>Positions- und Abstandsberechnung mit
         <a href="https://docs.astropy.org/en/stable/coordinates/#getting-started">Astropy SkyCoord</a></h4>
 
 </body>
